# SpaceInvaders

./: CMakeLists.txt  readme.md
src/: main.cpp
src/game/: Game.cpp  Game.h
src/game/entities/: Block.cpp  Laser.cpp  Laser.h  Obstacles.cpp  Obstacles.h  SpaceShip.cpp  SpaceShip.h
src/game/entities/Aliens/: Alien.cpp  Alien.h
src/game/entities/MysteryShip/: MysteryShip.cpp  MysteryShip.h
src/game/entities/Obstacles/: Block.cpp  Block.h  Obstacles.cpp  Obstacles.h
src/game/entities/Player/: SpaceShip.cpp  SpaceShip.h
src/utils/: Colours.h
